--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "browserify": "^13.1.1",
     "flux": "^2.0.3",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-open": "^2.0.0",
     "gulp-watch": "^4.3.11",
+    "jquery": "^3.1.1",
     "lodash": "^4.17.2",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
