--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "browserify": "^13.1.1",
     "flux": "^2.0.3",
     "gulp": "^3.9.1",
@@ -22,6 +23,7 @@
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
+    "toastr": "^2.1.2",
     "vinyl-source-stream": "^1.1.0"
   }
 }
