--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-watch": "^4.3.11",
     "jquery": "^3.1.1",
     "lodash": "^4.17.2",
+    "object-assign": "^4.1.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
